@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 sourceSets {
     main.java.srcDirs = ['src/main/java', '../src/main/java']
 }
